# voxel

./: Cargo.toml  README.md  renderdoc-settings.cap  scratch.md
shaders/: basic.comp  triangle.frag  triangle.frag.glsl  triangle.vert  triangle.vert.glsl
shaders/cube/: cube.frag.glsl
shaders/skybox/: skybox.frag.glsl  skybox.vert.glsl
src/: chunk.rs  constants.rs  debug_message_callback.rs  main.rs  measure_elapsed.rs  program.rs  raycasting.rs  texture.rs  vertex.rs
