[package]
name = "voxel"
version = "0.1.0"
authors = ["Andrea Cognolato <andrecogno@hotmail.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
gl = "0.14.0"
glutin = "0.22.0-alpha5"
nalgebra-glm = "0.5.0"
image = "0.22.3"
rand = "0.7.2"
